test with background image on mobile-fixed

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ a.fa:focus {
   }
 
   section.hero {
-    background-attachment: scroll;
+    background-attachment: fixed;
   }
 
   .section h2 {
